Delete Btn Bug Fixes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <button id="add-card" >Add Card</button>
     <div class="container">
-        
+        <!-- <div class="card">
+            <span>Delete</span>
+        </div> -->
     </div>
 </body>
 <script src="app.js"></script>
